Bug 257772 - Fix !ENABLE(ACCESSIBILITY) build following 264911@main
Summary: Fix !ENABLE(ACCESSIBILITY) build following 264911@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-06 19:01 PDT by Ross Kirsling
Modified: 2023-06-06 19:06 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2023-06-06 19:01:46 PDT
.
Comment 1 Ross Kirsling 2023-06-06 19:02:44 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14720
Comment 2 EWS 2023-06-06 19:05:20 PDT
Committed 264917@main (a0d7223f7f31): <https://commits.webkit.org/264917@main>

Reviewed commits have been landed. Closing PR #14720 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-06-06 19:06:17 PDT
<rdar://problem/110360941>