Fix !ENABLE(ACCESSIBILITY) build following 264911@main https://bugs.webkit.org/show_bug.cgi?id=257772

Unreviewed build fix.

* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::onTextCompositionChange):
(WebCore::AXObjectCache::textCompositionObjectForNode):
Add missing stubs.

Canonical link: https://commits.webkit.org/264917@main